// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Code component should render a code block correctly 1`] = `
<code
  class="Code Code--block"
>
  <span
    class="hljs"
  >
    <span>
      children
    </span>
  </span>
</code>
`;

exports[`Code component should render a code block correctly in light mode 1`] = `
<code
  class="Code Code--block Code--lightMode"
>
  <span
    class="hljs"
  >
    <span>
      children
    </span>
  </span>
</code>
`;

exports[`Code component should render a code language correctly 1`] = `
<code
  class="Code Code--block"
>
  <span
    class="hljs"
  >
    <span>
      children
    </span>
  </span>
</code>
`;

exports[`Code component should render correctly 1`] = `
<code
  class="Code"
>
  children
</code>
`;
